--- a/AppTFG/AppTFG/Paginas/SubirFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirFoto.xaml
@@ -1,23 +1,31 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.SubirFoto">
-    
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical" VerticalOptions="CenterAndExpand">
-            <Button x:Name="BrowseButton"  
-                        BackgroundColor="Gray" 
-                        TextColor="White" 
-                        Text="Abrir Galería" 
-                        HorizontalOptions="CenterAndExpand"
-                        Clicked="BtnAbrirGaleria_Clicked"/>
-            <Image x:Name="image" HeightRequest="150" WidthRequest="200"/>
-            <StackLayout Orientation="Vertical" HorizontalOptions="CenterAndExpand" Margin="0,10">
-                <Entry x:Name="TittleEntry" Placeholder="Title" WidthRequest="300"/>
+        <ScrollView>
+            <StackLayout BackgroundColor="White">
+                <StackLayout Padding="15">
+                    <Label Text="Nombre: " TextColor="#263238" FontSize="Large"/>
+                    <Entry x:Name="txtNombre" TextColor="White" Text="{Binding Nombre}" 
+                       Placeholder="Ingresa título de la foto" 
+                       PlaceholderColor="LightGray" BackgroundColor="Black" FontSize="Medium"/>
+                    <Button x:Name="btnImagen" Text="Añadir imagen" 
+                            BackgroundColor="LightBlue" Margin="10" 
+                            TextColor="Black" WidthRequest="200" 
+                            HorizontalOptions="Center" Clicked="BtnImagen_Clicked"/>
+                    <Image x:Name="imgFoto" Source="{Binding Imagen}" 
+                           VerticalOptions="StartAndExpand" HorizontalOptions="Center" 
+                           Aspect="AspectFill" HeightRequest="150" 
+                           WidthRequest="150" Margin="10"/>
+                </StackLayout>
+
+                <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center"/>
             </StackLayout>
-            <Button x:Name="UploadButton" Margin="0,20" BackgroundColor="Gray" TextColor="White"
-                        Text="Subir foto" HorizontalOptions="CenterAndExpand" Clicked="BtnSubirFoto_Clicked"/>
-            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center"/>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="btnRegistrar" Text="Subir" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked"/>
+        <ToolbarItem x:Name="btnEliminar" Text="Borrar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked"/>
+    </ContentPage.ToolbarItems>
 </ContentPage>
