--- a/AppTFG/AppTFG/App.xaml
+++ b/AppTFG/AppTFG/App.xaml
@@ -6,7 +6,7 @@
     -->
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#263238</Color>
+            <Color x:Key="Primary">White</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="#263238"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
@@ -27,113 +27,7 @@
                 </Setter>
             </Style>
         </ResourceDictionary>
-        <!--<DataTemplate x:Key="PueblosTemplate">
-            <Grid Padding="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Image Grid.RowSpan="2" 
-                       Source="{Binding ImagenPrincipal}" 
-                       Aspect="AspectFill"
-                       HeightRequest="60" 
-                       WidthRequest="60" />
-                <Label Grid.Column="1" 
-                       Text="{Binding Name}" 
-                       FontAttributes="Bold" />
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Key="RutasTemplate">
-            <Grid Padding="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Image Grid.RowSpan="2" 
-                       Source="{Binding ImagenPrincipal}" 
-                       Aspect="AspectFill"
-                       HeightRequest="60" 
-                       WidthRequest="60" />
-                <Label Grid.Column="1" 
-                       Text="{Binding Text}" 
-                       FontAttributes="Bold" />
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Key="ActividadesTemplate">
-            <Grid Padding="10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Image Grid.RowSpan="2" 
-                       Source="{Binding ImagenPrincipal}" 
-                       Aspect="AspectFill"
-                       HeightRequest="60" 
-                       WidthRequest="60" />
-                <Label Grid.Column="1" 
-                       Text="{Binding Text}" 
-                       FontAttributes="Bold" />
-            </Grid>
-        </DataTemplate>-->
     </Application.Resources>
 </Application>
 
 
-<!--
-        <Application.Resources>
-    <DataTemplate x:Key="AnimalTemplate">
-        <Grid Padding="10">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Image Grid.RowSpan="2" 
-                       Source="{Binding ImagenPrincipal}" 
-                       Aspect="AspectFill"
-                       HeightRequest="60" 
-                       WidthRequest="60" />
-            <Label Grid.Column="1" 
-                       Text="{Binding Name}" 
-                       FontAttributes="Bold" />
-            <Label Grid.Row="1"
-                       Grid.Column="1" 
-                       Text="{Binding Location}"
-                       FontAttributes="Italic" 
-                       VerticalOptions="End" />
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="AnimalSearchTemplate">
-        <Grid Padding="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.15*" />
-                <ColumnDefinition Width="0.85*" />
-            </Grid.ColumnDefinitions>
-            <Image Source="{Binding ImagenPrincipal}" 
-                       Aspect="AspectFill"
-                       HeightRequest="40" 
-                       WidthRequest="40" />
-            <Label Grid.Column="1" 
-                       Text="{Binding Name}" 
-                       FontAttributes="Bold" />
-        </Grid>
-    </DataTemplate>
-
-    </Application.Resources>
-    -->
