--- a/AppTFG/AppTFG/AppShell.xaml
+++ b/AppTFG/AppTFG/AppShell.xaml
@@ -13,15 +13,27 @@
     <Shell.Resources>
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
+                <!--El color Primary se establece en la clase App.xaml y es el blanco-->
                 <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.ForegroundColor" Value="White" />
-                <Setter Property="Shell.TitleColor" Value="White" />
-                <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
-                <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="White"/>
-                <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF"/>
-                <Setter Property="Shell.TabBarTitleColor" Value="White"/>
+                
+                <!--Color de lo que está en los toolbars y del menú-->
+                <Setter Property="Shell.ForegroundColor" Value="Gray" />
+                <!--Color de los títulos que aparecen en los toolbars-->
+                <Setter Property="Shell.TitleColor" Value="Gray" />
+                
+                <!--<Setter Property="Shell.DisabledColor" Value="Black" />
+                <Setter Property="Shell.UnselectedColor" Value="Blue" />-->
+
+                <!--Color de la barra del menú inferior-->
+                <Setter Property="Shell.TabBarBackgroundColor" Value="White" />
+                
+                <!--<Setter Property="Shell.TabBarForegroundColor" Value="Black"/>-->
+                
+                <!--Color de los iconos del menú inferior que no están seleccionados-->
+                <Setter Property="Shell.TabBarUnselectedColor" Value="LightGray"/>
+
+                <!--Color de los iconos del menú inferior que están seleccionados-->
+                <Setter Property="Shell.TabBarTitleColor" Value="Gray"/>
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
@@ -31,21 +43,27 @@
             https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/flyout#flyoutitem-and-menuitem-style-classes
             -->
             <Style Class="FlyoutItemLabelStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="White"></Setter>
+                <!--Color de la propiedad seleccionada en el menú lateral-->
+                <Setter Property="TextColor" Value="Gray"></Setter>
             </Style>
             <Style Class="FlyoutItemLayoutStyle" TargetType="Layout" ApplyToDerivedTypes="True">
-                <Setter Property="BackgroundColor" Value="LightBlue"></Setter>
+                
+                <!--<Setter Property="BackgroundColor" Value="Red"></Setter>-->
+                
                 <Setter Property="VisualStateManager.VisualStateGroups">
                     <VisualStateGroupList>
                         <VisualStateGroup x:Name="CommonStates">
                             <VisualState x:Name="Normal">
                                 <VisualState.Setters>
+                                    <!--Color del fondo de las propiedades del menú desplegable-->
                                     <Setter Property="BackgroundColor" Value="LightGray" />
+                                    <!--Color de las letras de las propiedades del menú desplegable-->
                                     <Setter TargetName="FlyoutItemLabel" Property="Label.TextColor" Value="{StaticResource Primary}" />
                                 </VisualState.Setters>
                             </VisualState>
                             <VisualState x:Name="Selected">
                                 <VisualState.Setters>
+                                    <!--Color del fondo de la propiedad del menú desplegable seleccionada-->
                                     <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
                                 </VisualState.Setters>
                             </VisualState>
@@ -84,53 +102,9 @@
         <ShellContent Title="Rutas Turisticas" Icon="brujula.png" Route="RutasTuristicas" ContentTemplate="{DataTemplate local:ListaRutas}" />
     </FlyoutItem>
 
-    <!--
-        This defines content that won't show up in a flyout menu. When this content is active the flyout menu won't be available.
-        This is useful for creating areas of the application where you don't want users to be able to navigate away from.
-        If you would like to navigate to this content you can do so by calling
-        await Shell.Current.GoToAsync("//LoginPage");
-    -->
-
     <ShellContent Title="Actividades" Icon="senderismo.png" Route="Actividades" ContentTemplate="{DataTemplate local:ListaActividades}"/>
     <ShellContent Title="Comentarios" Icon="comentarios.png" Route="Comentarios" ContentTemplate="{DataTemplate local:Comentarios}"/>
     <ShellContent Title="Ajustes" Icon="ajustes.png" Route="Ajustes" ContentTemplate="{DataTemplate local:Ajustes}" />
     <ShellContent Title="Cerrar sesión" Icon="logout.png" ContentTemplate="{DataTemplate local:LoginPage}" />
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
-    <!-- -->
-
-    <!-- Optional Templates 
-    // These may be provided inline as below or as separate classes. 
-
-    // This header appears at the top of the Flyout.
-    // https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/flyout#flyout-header-->
-    <!--<Shell.FlyoutHeaderTemplate>
-        <DataTemplate>
-            <Grid BackgroundColor="{StaticResource Primary}"
-              HeightRequest="150">
-                <Label Text="App de turismo" FontSize="25" TextColor="White" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
-            </Grid>
-        </DataTemplate>
-    </Shell.FlyoutHeaderTemplate> -->
-    <!--// ItemTemplate is for ShellItems as displayed in a Flyout
-    // https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/flyout#define-flyoutitem-appearance
-    <Shell.ItemTemplate>
-        <DataTemplate>
-            <ContentView>
-                Bindable Properties: Title, Icon
-            </ContentView>
-        </DataTemplate>
-    </Shell.ItemTemplate>
-
-    // MenuItemTemplate is for MenuItems as displayed in a Flyout
-    // https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/flyout#define-menuitem-appearance
-    <Shell.MenuItemTemplate>
-        <DataTemplate>
-            <ContentView>
-                Bindable Properties: Text, Icon
-            </ContentView>
-        </DataTemplate>
-    </Shell.MenuItemTemplate>
-
-    -->
-
 </Shell>
