--- a/AppTFG/AppTFG/Paginas/ListaPueblos.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaPueblos.xaml
@@ -1,21 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:custom1="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              x:Class="AppTFG.Paginas.ListaPueblos">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="White">
-            <Label Text="Lista de Pueblos" TextColor="Black" FontSize="Large" Margin="15"/>
-
-            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center"/>
-
+        <StackLayout BackgroundColor="White" Spacing="0" Orientation="Vertical" Padding="0" >
+            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
             <ListView x:Name="lsvPueblos" ItemSelected="LsvPueblos_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout BackgroundColor="White" Spacing="5" Orientation="Horizontal" Padding="5">
-                                <custom1:CircleImage Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" />
-                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="20" TextColor="#030303" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start"/>
+                            <StackLayout BackgroundColor="White" Spacing="0" Orientation="Horizontal" Padding="5">
+                                <Image Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
+                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="20" TextColor="Gray" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
