--- a/AppTFG/AppTFG/Paginas/ListaVideosPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaVideosPueblo.xaml
@@ -1,15 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:video="clr-namespace:AppTFG.FormsVideoLibrary"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="AppTFG.Paginas.ListaVideosPueblo"
-             Title="Vídeos del pueblo">
-    <StackLayout>
-        <video:VideoPlayer x:Name="videoPlayer" VerticalOptions="FillAndExpand" />
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="AppTFG.Paginas.ListaVideosPueblo">
+    <ContentPage.Content>
+        <StackLayout BackgroundColor="White">
+            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ListView x:Name="lsvVideosPueblo" ItemsSource="{Binding Videos}" ItemSelected="LsvVideosPueblo_ItemSelected" HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout BackgroundColor="White" Spacing="5" Orientation="Horizontal" Padding="5">
+                                <Label Text="{Binding Nombre}" FontSize="Medium" 
+                                       LineBreakMode="WordWrap" TextColor="Black" Margin="10"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </ContentPage.Content>
 
-        <Button Text="Show Video Library"
-                Margin="10"
-                HorizontalOptions="Center"
-                Clicked="OnShowVideoLibraryClicked" />
-    </StackLayout>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="btnAgregar" Text="Agregar" Order="Primary" Priority="0" Clicked="BtnAgregar_Clicked"/>
+    </ContentPage.ToolbarItems>
 </ContentPage>
