--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -1,54 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:local="clr-namespace:AppTFG.Helpers"
              x:Class="AppTFG.Paginas.PaginaPueblo">
-    <ContentPage.Content>
-        <ScrollView Margin="0">
-            <StackLayout BackgroundColor="White" Spacing="0" Padding="0" Margin="0">
-                <StackLayout Orientation="Horizontal" BackgroundColor="White" Spacing="0" Padding="0" HeightRequest="60">
-                    <Grid ColumnSpacing="0" >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                    </Grid>
-                    <Button x:Name="btnRutas" Text="Rutas"
+             <!--xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"-->
+             
+    <ScrollView Margin="0">
+        <StackLayout BackgroundColor="White" Spacing="0" Padding="0" Margin="0">
+            <StackLayout Orientation="Horizontal" BackgroundColor="White" Spacing="0" Padding="0" HeightRequest="60">
+                <Grid ColumnSpacing="0" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+                <Button x:Name="btnRutas" Text="Rutas"
                             BackgroundColor="White"
                             TextColor="Gray" HorizontalOptions="FillAndExpand" 
                             Clicked="BtnRutas_Clicked" Grid.Column="0" BorderColor="Gray"/>
-                    <Button x:Name="btnActividades" Text="Acts"
+                <Button x:Name="btnActividades" Text="Acts"
                             BackgroundColor="White" 
                             TextColor="Gray" HorizontalOptions="FillAndExpand" 
                             Clicked="BtnActividades_Clicked" Grid.Column="1" BorderColor="Gray"/>
-                    <Button x:Name="btnFotos" Text="Fotos"
+                <Button x:Name="btnFotos" Text="Fotos"
                             BackgroundColor="White" 
                             TextColor="Gray" HorizontalOptions="FillAndExpand" 
                             Clicked="BtnFotos_Clicked" Grid.Column="2" BorderColor="Gray"/>
-                    <Button x:Name="btnVideo" Text="Vídeos" 
+                <Button x:Name="btnVideo" Text="Vídeos" 
                             BackgroundColor="White" 
                             TextColor="Gray"  HorizontalOptions="FillAndExpand" 
                             Clicked="BtnVideo_Clicked" Grid.Column="3" BorderColor="Gray"/>
-                </StackLayout>
-                <StackLayout Padding="15">
-                    <Label Text="Nombre: " TextColor="Gray" FontSize="Medium"/>
-                    <Entry x:Name="txtNombre" TextColor="DarkGray" Text="{Binding Nombre}" 
+            </StackLayout>
+            <StackLayout Padding="5">
+                <Label Text="Nombre: " TextColor="Gray" FontSize="Medium" />
+                <Entry x:Name="txtNombre" TextColor="DarkGray" Text="{Binding Nombre}" 
                        Placeholder="Ingresa el nombre del pueblo" 
-                       PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
-                    <Button x:Name="btnImagen" Text="Abrir galería" 
+                       PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium" />
+                <Button x:Name="btnImagen" Text="Abrir galería" 
                             BackgroundColor="White" Margin="10" 
                             TextColor="Gray" WidthRequest="150"  
                             HorizontalOptions="Center" Clicked="BtnImagen_Clicked"/>
-                    <Image x:Name="imgPueblo" Source="{Binding ImagenPrincipal}" 
+                <Image x:Name="imgPueblo" Source="{Binding ImagenPrincipal}" 
                            VerticalOptions="StartAndExpand" HorizontalOptions="Center" 
                            Aspect="AspectFill" HeightRequest="-1" 
                            WidthRequest="-1" />
+                <Label Text="Descripción del pueblo: " TextColor="Gray" FontSize="Medium"/>
+                <Entry x:Name="txtDescripcion" TextColor="DarkGray" Text="{Binding Descripcion}" 
+                       Placeholder="Ingresa una descripción del pueblo"  
+                       PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
+                <Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
+                <Entry x:Name="txtCoordenadaX" TextColor="DarkGray" Text="{Binding CoordenadaX}" 
+                       Placeholder="Por ejemplo: 37.003000" 
+                       PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
+                <Entry x:Name="txtCoordenadaY" TextColor="DarkGray" Text="{Binding CoordenadaY}" 
+                       Placeholder="Por ejemplo: -37.003000" 
+                       PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
+                <Button x:Name="btnMapa" Text="Cargar mapa con coordenadas" 
+                            BackgroundColor="White" Margin="10" 
+                            TextColor="Gray" WidthRequest="150"  
+                            HorizontalOptions="Center" /> <!--Clicked="BtnCrearMapa_Clicked"-->
+                <StackLayout x:Name="stackMapa" Margin="0" HeightRequest="-1" WidthRequest="-1">
+                    <!--<maps:Map x:Name="map" WidthRequest="-1" HeightRequest="400" HasScrollEnabled="True"/>-->
+                    <local:BindableMap x:Name="map" MapPosition="{Binding MyPosition}" MapPins="{Binding PinCollection}" />
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
+                        <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Gray" />
+                        <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Gray" />
+                        <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Gray" />
+                    </StackLayout>
                 </StackLayout>
-                <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
             </StackLayout>
-        </ScrollView>
-    </ContentPage.Content>
+            <ActivityIndicator x:Name="indicator" Color="#263238" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+        </StackLayout>
+    </ScrollView>
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar " Order="Primary" Priority="3" Clicked="BtnEliminar_Clicked"/>
